--- a/app/src/main/res/layout/fragment_sign_up2.xml
+++ b/app/src/main/res/layout/fragment_sign_up2.xml
@@ -44,7 +44,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Contact Address"/>
+        android:text="Company Address"/>
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/company_address"
@@ -64,6 +64,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:textSize="14sp"
+        android:inputType="phone"
         android:textColor="@color/black"/>
 
     <Button
