--- a/app/src/main/res/layout/passenger_list_item.xml
+++ b/app/src/main/res/layout/passenger_list_item.xml
@@ -30,6 +30,7 @@
                 android:layout_height="150dp"
                 android:scaleType="fitXY"
                 android:adjustViewBounds="true"
+
                 />
 
             <RelativeLayout
@@ -268,6 +269,7 @@
                 android:layout_height="150dp"
                 android:scaleType="fitXY"
                 android:adjustViewBounds="true"
+                android:src="@drawable/passngeruserimage"
                 />
 
             <LinearLayout
