--- a/app/src/main/res/layout/fragment_passenger_accepted.xml
+++ b/app/src/main/res/layout/fragment_passenger_accepted.xml
@@ -11,7 +11,7 @@
         android:id="@+id/ivPassengerImage"
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        />
+        android:src="@drawable/passngeruserimage" />
 
 
     <com.github.clans.fab.FloatingActionMenu
@@ -55,17 +55,15 @@
 
     <RelativeLayout
         android:id="@+id/rlPassengerDetails"
-        android:layout_below="@+id/ivPassengerImage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="20dp"
-        >
+        android:layout_below="@+id/ivPassengerImage"
+        android:padding="20dp">
 
         <TextView
             android:id="@+id/tvRideStatus"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/tvPassengerName"
@@ -76,47 +74,42 @@
 
         <TextView
             android:id="@+id/tvPassengerMobileNumber"
-            android:layout_below="@id/tvPassengerName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Mobile Number: "
-            />
+            android:layout_below="@id/tvPassengerName"
+            android:text="Mobile Number: " />
 
         <TextView
             android:id="@+id/tvPassengerJob"
-            android:layout_below="@id/tvPassengerMobileNumber"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Job: "
-            />
+            android:layout_below="@id/tvPassengerMobileNumber"
+            android:text="Job: " />
 
         <TextView
             android:id="@+id/tvPassengerAge"
-            android:layout_below="@+id/tvPassengerJob"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Age: "
-            />
+            android:layout_below="@+id/tvPassengerJob"
+            android:text="Age: " />
 
         <TextView
             android:id="@+id/tvPassengerEmail"
-            android:layout_below="@+id/tvPassengerAge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Email: "
-            />
+            android:layout_below="@+id/tvPassengerAge"
+            android:text="Email: " />
 
         <Button
             android:id="@+id/btPassengerDroppedoff"
-            android:layout_centerHorizontal="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="80dp"
             android:layout_width="300dp"
             android:layout_height="60dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="80dp"
             android:text="Drop-off Passenger"
             android:textColor="@color/white"
-            android:visibility="invisible"
-            />
+            android:visibility="invisible" />
 
     </RelativeLayout>
 
